@@ -11,7 +11,7 @@ get_header(); ?>
 		<div id="content" role="main">
 
 			<?php while ( have_posts() ) : the_post(); ?>
-				<?php get_template_part( 'content', 'page' ); ?>
+				<?php get_template_part( 'template-parts/pages/content', 'page' ); ?>
 				<?php comments_template(); ?>
 			<?php endwhile; // end of the loop. ?>
 
