@@ -1,0 +1,39 @@
+<?php
+/**
+ * Display subpages of this parent page
+ *
+ * Theme: Manduca
+ *@since 17.1
+ **/
+
+?>
+
+<article id="post-<?php the_ID(); ?>" <?php post_class(); ?>>
+		<header class="entry-header">
+			<h1 class="entry-title" ><?php the_title(); ?></h1>
+			
+		</header>
+
+		<div class="entry-content">
+			<?php the_content(); ?>
+			<?php wp_link_pages( array( 'before' => '<div class="page-links">' .__( 'Pages',' manduca' ), 'after' => '</div>' ) ); ?>
+		
+		<?php	
+				wp_list_pages( array (
+					'child_of' 		=> $post->ID,
+					'order'			=>'ASC',
+					'orderby'		=>'menu_order',
+					'depth'			=> 1,
+					'title_li'		=>''
+					)
+				);
+		?>
+		
+		</div><!-- .entry-content -->
+		
+		
+		<footer class="entry-meta">
+			<?php edit_post_link( '<svg viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M491 1536l91-91-235-235-91 91v107h128v128h107zm523-928q0-22-22-22-10 0-17 7l-542 542q-7 7-7 17 0 22 22 22 10 0 17-7l542-542q7-7 7-17zm-54-192l416 416-832 832h-416v-416zm683 96q0 53-37 90l-166 166-416-416 166-165q36-38 90-38 53 0 91 38l235 234q37 39 37 91z"/></svg>' .__( 'Edit', 'manduca' ), '<span class="edit-link">', '</span>' ); ?>
+		</footer><!-- .entry-meta -->
+	</article><!-- #post -->
+	
